# baldepress

./: .gitignore  Makefile.am  README.md  configure.ac
include/: baldepress.h
include/baldepress/: git-private.h  markdown-private.h
libbaldepress/: Makefile.am  git.c  markdown.c
src/: Makefile.am
src/include/: Makefile.am
src/include/baldepress/: Makefile.am  git-private.h  markdown-private.h
src/libbaldepress/: Makefile.am  git.c  markdown.c
tests/: Makefile.am  check_git.c  check_markdown.c
